--- a/21_microbiome_community.Rmd
+++ b/21_microbiome_community.Rmd
@@ -85,6 +85,7 @@ ggplot(df, aes(x = SampleID, y = FeatureID, fill = clr_z)) +
   labs(x = "Samples", y = "Taxa")
 ```
 
+
 _pheatmap_ is a package that provides methods to plot clustered heatmaps. 
 
 ```{r pheatmap1}
@@ -119,9 +120,9 @@ visualize them with dendrogram.
 ```{r pheatmap2}
 # Package for creating dendrograms
 if(!require(dendextend)){
-    install.packages("dendextend")
+  install.packages("dendextend")
+  library(dendextend)
 }
-library(dendextend)
 
 # Hierarchical clustering
 taxa_clusters <- hclust(dist(mat), method = "complete")
@@ -139,13 +140,21 @@ Based on dendrogram, we decide to create three clusters.
 # Creates clusters
 taxa_clusters <- cutree(tree = taxa_dendrogram, k = 3)
 
+# Converts into data frame
+taxa_clusters <- data.frame(clusters = taxa_clusters)
+taxa_clusters$clusters <- factor(taxa_clusters$clusters)
+
+# Order data so that it's same as in dendogram
+taxa_clusters <- taxa_clusters[order(match(rownames(taxa_clusters), labels(taxa_dendrogram))), , drop = FALSE] 
+
 # Prints taxa and their clusters
-taxa_clusters 
+taxa_clusters
 ```
 
 ```{r pheatmap4}
-# Creates clusters, and adds information to rowData
-rowData(tse_phylum_subset)$clusters <- cutree(tree = taxa_dendrogram, k = 3)
+# Adds information to rowData
+rowData(tse_phylum_subset)$clusters <- taxa_clusters[order(match(rownames(taxa_clusters), 
+                                                                 rownames(tse_phylum_subset))), ]
 
 # Prints taxa and their clusters
 rowData(tse_phylum_subset)$clusters
@@ -154,24 +163,242 @@ rowData(tse_phylum_subset)$clusters
 Now we can create heatmap with additional annotations.
 
 ```{r pheatmap5}
-# Creates data frame that includes cluster data
-taxa_clusters <- rowData(tse_phylum_subset)$clusters
-taxa_clusters <- as.character(taxa_clusters)
-taxa_clusters <- data.frame(cluster = taxa_clusters)
-row.names(taxa_clusters) <- rownames(tse_phylum_subset)
-
 # Creates data frame that includes data on sample type
 sample_types <- unfactor(colData(tse_phylum_subset)$SampleType)
 sample_types <- data.frame(sample_types = sample_types)
 row.names(sample_types) <- colnames(tse_phylum_subset)
 
+# Determines the scaling of colorss
+# Scale colors
+breaks <- seq(-ceiling(max(abs(mat))), ceiling(max(abs(mat))), 
+              length.out = ifelse( max(abs(mat))>5, 2*ceiling(max(abs(mat))), 10 ) )
+colors <- colorRampPalette(c("darkblue", "blue", "white", "red", "darkred"))(length(breaks)-1)
+
 pheatmap(mat, annotation_row = taxa_clusters, 
-         annotation_col = sample_types)
+         annotation_col = sample_types,
+         breaks = breaks,
+         color = colors)
 ```
 
 In addition to _pheatmap_ package, there are also other packages that
 provide functions for more complex heatmaps, such as [_iheatmapr_](https://docs.ropensci.org/iheatmapr/articles/full_vignettes/iheatmapr.html).
 
+
+It is also possible to create similar heatmap by just using _ggplot2_.
+
+```{r}
+taxa_clusters$Feature <- rownames(taxa_clusters)
+taxa_clusters$Feature <- factor(taxa_clusters$Feature, levels = taxa_clusters$Feature)
+# Initialize plot
+row_annotation <- ggplot(taxa_clusters) + 
+  geom_tile(aes(x = NA, y = Feature, fill = clusters)) + coord_equal(ratio = 1) +
+  theme(
+        axis.text.x=element_blank(),
+        axis.text.y=element_blank(),
+        axis.ticks.y=element_blank(),
+        axis.title.y=element_blank(),
+        axis.title.x = element_text(angle = 90, vjust = 0.5, hjust=1),
+        plot.margin=margin(0,0,0,0),
+        ) +
+      labs(fill = "Clusters", x = "Clusters")
+
+row_annotation
+```
+
+```{r}
+# Hierarchical clustering
+sample_clusters <- hclust(dist(t(mat)), method = "complete")
+
+# Creates a dendrogram
+sample_dendrogram <- as.dendrogram(sample_clusters)
+
+# Plots it
+plot(sample_dendrogram)
+
+# Creates clusters
+sample_clusters <- cutree(tree = sample_dendrogram, k = 3)
+
+# Converts into data frame
+sample_clusters <- data.frame(clusters = sample_clusters)
+sample_clusters$clusters <- factor(sample_clusters$clusters)
+
+# Order data so that it's same as in dendogram
+sample_clusters <- sample_clusters[order(match(rownames(sample_clusters), labels(sample_dendrogram))), , drop = FALSE] 
+
+# Order data based on 
+tse_phylum_subset <- tse_phylum_subset[ , order(match(colnames(tse_phylum_subset), 
+                                                      rownames(sample_clusters)))]
+
+# Prints taxa and their clusters
+sample_clusters
+```
+
+```{r}
+sample_types <- sample_types[rownames(sample_clusters), ]
+sample_types$Sample <- factor(rownames(sample_types), levels = rownames(sample_types))
+sample_types <- sample_types[order(sample_types$sample_types), ]
+
+# Initialize plot
+col_annotation <- ggplot(sample_types) + scale_y_discrete(position = "right", expand = c(0,0)) +
+  geom_tile(aes(y = NA, x = Sample, fill = sample_types)) + coord_equal(ratio = 1) +
+  theme(
+        axis.text.x=element_blank(),
+        axis.text.y=element_blank(),
+        axis.title.x=element_blank(),
+        axis.ticks.x=element_blank(),
+        plot.margin=margin(0,0,0,0),
+        axis.title.y.right = element_text(angle=0, vjust = 0.5)
+        ) +
+      labs(fill = "Sample types", y = "Sample types")
+
+col_annotation
+
+```
+
+```{r heatmap2}
+if(!require(reshape2)){
+    install.packages("reshape2")
+    library(reshape2)
+}
+# Order data based on clusters and sample types
+mat <- mat[unfactor(taxa_clusters$Feature), unfactor(sample_types$Sample)]
+
+# ggplot requires data in melted format
+melted_mat <- melt(mat)
+colnames(melted_mat) <- c("Taxa", "Sample", "clr_z")
+
+# Determines the scaling of colorss
+maxval <- round(max(abs(melted_mat$clr_z)))
+limits <- c(-maxval, maxval)
+breaks <- seq(from = min(limits), to = max(limits), by = 0.5)
+colours <- c("darkblue", "blue", "white", "red", "darkred")
+
+heatmap <- ggplot(melted_mat) + 
+  geom_tile(aes(x = Sample, y = Taxa, fill = clr_z)) +
+  theme(
+    axis.title.y=element_blank(),
+    axis.title.x=element_blank(),
+    axis.ticks.y=element_blank(),
+    axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1),
+    
+    plot.margin=margin(0,0,0,0), # removes margins
+    legend.key.height= unit(1, 'cm')
+    ) +
+  scale_fill_gradientn(name = "CLR + Z transform", 
+                       breaks = breaks, 
+                       limits = limits, 
+                       colours = colours) + 
+  scale_y_discrete(position = "right")
+
+heatmap
+```
+
+
+```{r biclustering_12}
+if(!require(patchwork)){
+    install.packages("patchwork")
+    library(patchwork)
+}
+
+# Create layout
+design <- c(
+  area(2, 1, 3, 1),
+  area(2, 2, 3, 3),
+  area(1, 2, 1, 3)
+)
+
+plot(design)
+```
+
+```{r fig.width=10, fig.height=8}
+# Combine plots
+plot <- row_annotation + heatmap + col_annotation + 
+    plot_layout(design = design, guides = "collect", # Specify layout, collect legends
+                
+                # Adjust widths and heights to align plots.
+                # When annotation plot is larger, it might not fit into its column/row.
+                # Then you need to make column/row larger.
+                
+                # Relative widths and heights of each column and row:
+                # Currently, the width of the first column is 15 % and the height of the 
+                # first row is 25 % the size of others
+                
+                # To get this work most of the times, you can adjust all sizes to be 1, i.e. equal, 
+                # but then the gaps between plots are larger.
+                widths = c(0.15, 1, 1),
+                heights = c(0.25, 1, 1))
+
+plot
+
+```
+
+```{r}
+if(!require(ggdendro)){
+    install.packages("ggdendro")
+    library(ggdendro)
+}
+
+dendro_data <- dendro_data(taxa_dendrogram)
+
+taxa_dendrogram <- ggplot(segment(dendro_data)) + 
+  geom_segment(aes(x = x, y = y, xend = xend, yend = yend)) + 
+  coord_flip() + 
+  scale_y_reverse(expand = c(0.2, 0)) +
+  theme_dendro() + 
+  theme(plot.margin=margin(0,0,0,0)) # removes margins
+
+taxa_dendrogram
+```
+
+```{r}
+dendro_data <- dendro_data(sample_dendrogram)
+
+sample_dendrogram <- ggplot(segment(dendro_data)) + 
+  geom_segment(aes(x = x, y = y, xend = xend, yend = yend)) + 
+  theme_dendro() + 
+  theme(plot.margin=margin(0,0,0,0)) # removes margins
+
+sample_dendrogram
+```
+
+
+```{r biclustering_12}
+# Create layout
+design <- c(
+  area(3, 1, 4, 1),
+  area(3, 2, 4, 2),
+  area(1, 3, 1, 4),
+  area(2, 3, 2, 4),
+  area(3, 3, 4, 4)
+)
+
+plot(design)
+```
+
+```{r fig.width=10, fig.height=8}
+# Combine plots
+plot <- taxa_dendrogram + 
+  row_annotation +
+  sample_dendrogram + 
+  col_annotation + 
+  heatmap +
+    plot_layout(design = design, guides = "collect", # Specify layout, collect legends
+                
+                # Adjust widths and heights to align plots.
+                # When annotation plot is larger, it might not fit into its column/row.
+                # Then you need to make column/row larger.
+                
+                # Relative widths and heights of each column and row:
+                # Currently, the width of the first column is 15 % and the height of the 
+                # first row is 25 % the size of others
+                
+                # To get this work most of the times, you can adjust all sizes to be 1, i.e. equal, 
+                # but then the gaps between plots are larger.
+                widths = c(0.25, 0.15, 1, 1, 1),
+                heights = c(0.25, 0.2, 0.25, 1, 1))
+
+plot
+```
 
 
 # Community typing {#community-typing}
