Remove unnecessary dependencies

--- a/21_microbiome_community.Rmd
+++ b/21_microbiome_community.Rmd
@@ -333,29 +333,28 @@ plot
 ```
 
 ```{r}
-if(!require(ggdendro)){
-    install.packages("ggdendro")
-    library(ggdendro)
+if(!require(ape)){
+    install.packages("ape")
+    library(ape)
 }
 
-dendro_data <- dendro_data(taxa_dendrogram)
+if(!require(ggtree)){
+    install.packages("ggtree")
+    library(ggtree)
+}
 
-taxa_dendrogram <- ggplot(segment(dendro_data)) + 
-  geom_segment(aes(x = x, y = y, xend = xend, yend = yend)) + 
-  coord_flip() + 
-  scale_y_reverse(expand = c(0.2, 0)) +
-  theme_dendro() + 
+dendro_data <- as.phylo(taxa_dendrogram) 
+
+taxa_dendrogram <- ggtree(dendro_data) + 
   theme(plot.margin=margin(0,0,0,0)) # removes margins
 
 taxa_dendrogram
 ```
 
 ```{r}
-dendro_data <- dendro_data(sample_dendrogram)
+dendro_data <- as.phylo(sample_dendrogram)
 
-sample_dendrogram <- ggplot(segment(dendro_data)) + 
-  geom_segment(aes(x = x, y = y, xend = xend, yend = yend)) + 
-  theme_dendro() + 
+sample_dendrogram <- ggtree(dendro_data) + layout_dendrogram() + 
   theme(plot.margin=margin(0,0,0,0)) # removes margins
 
 sample_dendrogram
@@ -394,8 +393,8 @@ plot <- taxa_dendrogram +
                 
                 # To get this work most of the times, you can adjust all sizes to be 1, i.e. equal, 
                 # but then the gaps between plots are larger.
-                widths = c(0.25, 0.15, 1, 1, 1),
-                heights = c(0.25, 0.2, 0.25, 1, 1))
+                widths = c(0.2, 0.15, 1, 1, 1),
+                heights = c(0.1, 0.15, 0.25, 1, 1))
 
 plot
 ```
