--- a/21_microbiome_community.Rmd
+++ b/21_microbiome_community.Rmd
@@ -181,7 +181,7 @@ provide functions for more complex heatmaps, such as [_iheatmapr_](https://docs.
 
 It is also possible to create similar heatmap by just using _ggplot2_.
 
-```{r}
+```{r more_complex_heatmap1}
 # We already created clusters and dendogram for features
 # taxa_clusters
 # taxa_dendogram
@@ -206,7 +206,7 @@ row_annotation <- ggplot(taxa_clusters) +
 row_annotation
 ```
 
-```{r}
+```{r more_complex_heatmap2}
 # Hierarchical clustering
 sample_clusters <- hclust(dist(t(mat)), method = "complete")
 
@@ -230,7 +230,7 @@ tse_phylum_subset <- tse_phylum_subset[ , rownames(sample_clusters)]
 sample_clusters
 ```
 
-```{r}
+```{r more_complex_heatmap3}
 # Add clusters to sample_types 
 sample_types <- sample_types[rownames(sample_clusters), , drop = FALSE]
 # Add sample names and convert them into factors
@@ -253,7 +253,7 @@ col_annotation
 
 ```
 
-```{r heatmap2}
+```{r more_complex_heatmap4}
 if(!require(reshape2)){
     install.packages("reshape2")
     library(reshape2)
@@ -292,7 +292,7 @@ heatmap
 ```
 
 
-```{r biclustering_12}
+```{r more_complex_heatmap5}
 if(!require(patchwork)){
     install.packages("patchwork")
     library(patchwork)
@@ -308,7 +308,7 @@ design <- c(
 plot(design)
 ```
 
-```{r fig.width=10, fig.height=8}
+```{r more_complex_heatmap6, fig.width=10, fig.height=8}
 # Combine plots
 plot <- row_annotation + heatmap + col_annotation + 
     plot_layout(design = design, guides = "collect", # Specify layout, collect legends
@@ -330,7 +330,7 @@ plot
 
 ```
 
-```{r}
+```{r more_complex_heatmap7}
 if(!require(ape)){
     install.packages("ape")
     library(ape)
@@ -351,7 +351,7 @@ taxa_dendrogram <- ggtree(dendro_data) +
 taxa_dendrogram
 ```
 
-```{r}
+```{r more_complex_heatmap8}
 # Create a phylogenetic tree from dendrogram data
 dendro_data <- as.phylo(sample_dendrogram)
 
@@ -363,7 +363,7 @@ sample_dendrogram
 ```
 
 
-```{r biclustering_12}
+```{r more_complex_heatmap9}
 # Create layout
 design <- c(
   area(3, 1, 4, 1),
@@ -376,7 +376,7 @@ design <- c(
 plot(design)
 ```
 
-```{r fig.width=10, fig.height=8}
+```{r more_complex_heatmap10, fig.width=10, fig.height=8}
 # Combine plots
 plot <- taxa_dendrogram + 
   row_annotation +
